--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,14 @@
-body::-webkit-scrollbar {
+body::-webkit-scrollbar
+{
   display: none;
 }
 
-html {
+html
+{
   scroll-behavior: smooth;
 }
 
+a
+{
+  cursor: pointer;
+}
