--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,3 +62,20 @@ summary:hover
 {
   color: gray !important;
 }
+
+table
+{
+  border-collapse: collapse;
+}
+
+table td, table th {
+  border: 1px solid gray;
+  padding: 8px;
+}
+
+
+.table-container {
+  display: grid;
+  grid-template-columns: auto;
+  justify-items: center;
+}
